Prepare ProgressiveStages 3.0 customization.